[gd_scene load_steps=9 format=3 uid="uid://3m3uubicpp45"]

[ext_resource type="Script" path="res://assets/scripts/tomato_shooter.gd" id="1_v0rqh"]
[ext_resource type="Texture2D" uid="uid://cp1ayvxq1h4b0" path="res://icon.svg" id="2_s6651"]
[ext_resource type="Texture2D" uid="uid://dehibo2k4cun7" path="res://assets/images/toon_tomato_basket_back.png" id="3_qixhf"]
[ext_resource type="Texture2D" uid="uid://vqaegfg75bj" path="res://assets/images/toon_tomato.png" id="4_ia6w5"]
[ext_resource type="Texture2D" uid="uid://c5w50r0ctc67m" path="res://assets/images/toon_tomato_basket_front.png" id="5_3slt8"]

[sub_resource type="Curve2D" id="Curve2D_2rw56"]
_data = {
"points": PackedVector2Array(-551.386, 777.418, 551.386, -777.418, -662, 357, 0, 0, 0, 0, -52, 1)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_73q6d"]
_data = {
"points": PackedVector2Array(37.6104, 697.914, -37.6104, -697.914, -9, 328, 0, 0, 0, 0, -1, 1)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_iycp6"]
_data = {
"points": PackedVector2Array(520.93, 796.908, -520.93, -796.908, 622, 351, 0, 0, 0, 0, 56, 0)
}
point_count = 2

[node name="TomatoShooter" type="Node2D"]
script = ExtResource("1_v0rqh")

[node name="Crosshair" type="Sprite2D" parent="."]
texture = ExtResource("2_s6651")

[node name="TomatoSpawnLeft" type="Path2D" parent="."]
curve = SubResource("Curve2D_2rw56")

[node name="TomatoSpawnMiddle" type="Path2D" parent="."]
curve = SubResource("Curve2D_73q6d")

[node name="TomatoSpawnRight" type="Path2D" parent="."]
curve = SubResource("Curve2D_iycp6")

[node name="Basket" type="Node2D" parent="."]
position = Vector2(-581, 435)
scale = Vector2(2.66, 2.66)

[node name="BasketBack" type="Sprite2D" parent="Basket"]
texture_filter = 1
texture = ExtResource("3_qixhf")

[node name="Tomato" type="Sprite2D" parent="Basket"]
texture_filter = 1
position = Vector2(-34, -64)
texture = ExtResource("4_ia6w5")

[node name="Tomato2" type="Sprite2D" parent="Basket"]
texture_filter = 1
position = Vector2(-70, -53)
texture = ExtResource("4_ia6w5")

[node name="Tomato3" type="Sprite2D" parent="Basket"]
texture_filter = 1
position = Vector2(18, -66)
texture = ExtResource("4_ia6w5")

[node name="Tomato4" type="Sprite2D" parent="Basket"]
texture_filter = 1
position = Vector2(-12, -49)
texture = ExtResource("4_ia6w5")

[node name="Tomato5" type="Sprite2D" parent="Basket"]
texture_filter = 1
position = Vector2(64, -56)
texture = ExtResource("4_ia6w5")

[node name="Tomato6" type="Sprite2D" parent="Basket"]
texture_filter = 1
position = Vector2(38, -49)
texture = ExtResource("4_ia6w5")

[node name="BasketFront" type="Sprite2D" parent="Basket"]
texture_filter = 1
texture = ExtResource("5_3slt8")
